# run-radar-run

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  ruff.toml  run-radar  tox.ini
.github/workflows/: ci-tests.yml  python-app.yml  release.yml
radar/: specs.yaml
radar/lang/adopt/: python.yaml
radar/lang/assess/: golang.yaml  mise.yaml  swagger.yaml
radar/lang/trial/: gha.yaml  ruamel-yaml.yaml
radar/strat/assess/: abstraction-shift.yaml
radar/techniques/assess/: api-first.yaml  two-by-two.yaml
radar/techniques/trial/: tech-radar.yaml
radar/tools/adopt/: ansible.yaml
radar/tools/assess/: ara.yaml  awx.yaml  devcontainers.yaml  excalidraw.yaml  local-kubernetes.yaml  plantuml.yaml  rundeck.yaml  zuul.yaml
radar/tools/hold/: keybase.yaml
radar/tools/trial/: borgbackup.yaml
runradar/: ingest.py  model.py  output.py
runradar/publishers/: twbyor.py
runradarrun/: ingest.py  main.py  model.py  output.py
runradarrun/publishers/: twbyor.py  zalando.py
tests/: test_ingest.py  test_model.py
