[tool.poetry]
name = "run-radar-run"
version = "0.2.0"
description = "Run, Radar, Run - Running your own tech radar should be easy"
authors = ["Alexei Znamensky <russoz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/russoz/run-radar-run"
repository = "https://github.com/russoz/run-radar-run"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]
keywords = [ "tech-radar" ]

packages = [
    { include = "runradarrun" }
]

[tool.poetry.scripts]
run-radar-run = "runradarrun.main:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/russoz/run-radar-run/issues"
"Source Code" = "https://github.com/russoz/run-radar-run"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = ">=5.4"
docker = ">=7.1.0"
blessed = ">=1.20.0"
gitpython = ">=3.1.44"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<10.0.0"
pytest-mock = "^3.10.0"
ruff = ">=0.9.0"
poethepoet = ">=0.27.0"
python-semantic-release = ">=9.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "runradarrun/main.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
changelog = { file = "CHANGELOG.md", mode = "init" }
build_command = "poetry build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
commit_parser = "conventional"
major_on_zero = true
tag_format = "v{version}"
parse_version_from_tag = true

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.remote]
type = "github"
repository = "russoz/run-radar-run"

[tool.poe.tasks]
test = "pytest -v"
lint = "ruff check ."
fmt = "ruff format ."

[tool.poe.tasks.check]
sequence = [
  {cmd = "ruff check ."},
  {cmd = "ruff format --check ."},
]

[tool.poe.tasks.qa]
sequence = ["check", "test"]

[tool.poe.tasks.deps]
sequence = [
  {cmd = "poetry update"},
  {cmd = "poetry lock"},
]

[tool.poe.tasks.release]
sequence = [
  {cmd = "semantic-release --verbose version"},
]
